--- a/src/home/home-style.css
+++ b/src/home/home-style.css
@@ -56,6 +56,7 @@ body{
 
 .rowsDiv{
     display: grid;
+    width: fit-content; /* !Asta a rezolvat problema! */
     grid-row-gap: 0.5vmax;
     grid-column-gap: 2vmax;
 }
@@ -83,637 +84,3 @@ body{
     width: 3vmax;
     height: fit-content;
 }
-
-/*!* navbar+image *!*/
-
-/*!* Auto layout *!*/
-/*display: flex;*/
-/*flex-direction: row;*/
-/*justify-content: space-between;*/
-/*align-items: center;*/
-/*padding: 0px;*/
-
-/*position: absolute;*/
-/*width: 1440px;*/
-/*height: 74px;*/
-/*left: 0px;*/
-/*top: 0px;*/
-
-/*background: #585454;*/
-
-
-/*!* navbar_img *!*/
-
-/*width: 73px;*/
-/*height: 69px;*/
-
-/*background: url(navbar-image-removebg-preview.png);*/
-/*filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));*/
-/*border-radius: 8px;*/
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 0;*/
-/*flex-grow: 0;*/
-
-
-/*!* navbar *!*/
-
-/*!* Auto layout *!*/
-/*display: flex;*/
-/*flex-direction: row;*/
-/*justify-content: space-between;*/
-/*align-items: center;*/
-/*padding: 16px 24px;*/
-/*gap: 233px;*/
-
-/*width: 1159px;*/
-/*height: 71px;*/
-
-/*background: #585454;*/
-/*border-radius: 8px;*/
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 1;*/
-/*flex-grow: 0;*/
-
-
-/*!* links *!*/
-
-/*!* Auto layout *!*/
-/*display: flex;*/
-/*flex-direction: row;*/
-/*align-items: flex-start;*/
-/*padding: 0px;*/
-/*gap: 32px;*/
-
-/*width: 617px;*/
-/*height: 24px;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 0;*/
-/*flex-grow: 0;*/
-
-
-/*!* Acasa *!*/
-
-/*width: 58px;*/
-/*height: 24px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 20px;*/
-/*line-height: 24px;*/
-
-/*color: #9DA873;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 0;*/
-/*flex-grow: 0;*/
-
-
-/*!* Noutati *!*/
-
-/*width: 70px;*/
-/*height: 24px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 20px;*/
-/*line-height: 24px;*/
-
-/*color: #FFFFFF;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 1;*/
-/*flex-grow: 0;*/
-
-
-/*!* Despre noi *!*/
-
-/*width: 102px;*/
-/*height: 24px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 20px;*/
-/*line-height: 24px;*/
-
-/*color: #F5F5F5;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 2;*/
-/*flex-grow: 0;*/
-
-
-/*!* Inchirieri *!*/
-
-/*width: 81px;*/
-/*height: 24px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 20px;*/
-/*line-height: 24px;*/
-
-/*color: #F5F5F5;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 3;*/
-/*flex-grow: 0;*/
-
-
-/*!* Vanzari *!*/
-
-/*width: 70px;*/
-/*height: 24px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 20px;*/
-/*line-height: 24px;*/
-
-/*color: #FFFFFF;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 4;*/
-/*flex-grow: 0;*/
-
-
-/*!* Contact *!*/
-
-/*width: 76px;*/
-/*height: 24px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 20px;*/
-/*line-height: 24px;*/
-
-/*color: #FFFFFF;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 5;*/
-/*flex-grow: 0;*/
-
-
-/*!* btns *!*/
-
-/*!* Auto layout *!*/
-/*display: flex;*/
-/*flex-direction: row;*/
-/*align-items: flex-start;*/
-/*padding: 0px;*/
-/*gap: 49px;*/
-
-/*width: 243px;*/
-/*height: 40px;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 1;*/
-/*flex-grow: 0;*/
-
-
-/*!* login_btn *!*/
-
-/*!* Auto layout *!*/
-/*display: flex;*/
-/*flex-direction: row;*/
-/*align-items: flex-start;*/
-/*padding: 8px 16px;*/
-/*gap: 10px;*/
-
-/*width: 84px;*/
-/*height: 40px;*/
-
-/*background: #9DA873;*/
-/*border-radius: 8px;*/
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 0;*/
-/*flex-grow: 0;*/
-
-
-/*!* Login *!*/
-
-/*width: 52px;*/
-/*height: 24px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 20px;*/
-/*line-height: 24px;*/
-
-/*color: #FFFFFF;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 0;*/
-/*flex-grow: 0;*/
-
-
-/*!* register_btn *!*/
-
-/*!* Auto layout *!*/
-/*display: flex;*/
-/*flex-direction: row;*/
-/*align-items: flex-start;*/
-/*padding: 8px 16px;*/
-/*gap: 10px;*/
-
-/*width: 110px;*/
-/*height: 40px;*/
-
-/*background: #CC506E;*/
-/*border-radius: 8px;*/
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 1;*/
-/*flex-grow: 0;*/
-
-
-/*!* Register *!*/
-
-/*width: 78px;*/
-/*height: 24px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 20px;*/
-/*line-height: 24px;*/
-
-/*color: #FFFFFF;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 0;*/
-/*flex-grow: 0;*/
-
-
-/*!* sub-menu-1 *!*/
-
-/*position: absolute;*/
-/*width: 12px;*/
-/*height: 12px;*/
-/*left: 826px;*/
-/*top: 37px;*/
-
-/*background: #CC506E;*/
-/*transform: rotate(-180deg);*/
-
-
-/*!* sub-menu-1 *!*/
-
-/*position: absolute;*/
-/*width: 12px;*/
-/*height: 12px;*/
-/*left: 724px;*/
-/*top: 36px;*/
-
-/*background: #CC506E;*/
-/*transform: rotate(-180deg);*/
-
-
-/*!* info-rectangle *!*/
-
-/*position: absolute;*/
-/*width: 1440px;*/
-/*height: 715px;*/
-/*left: 0px;*/
-/*top: 71px;*/
-
-/*background: url(real-estate.png);*/
-/*box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);*/
-
-
-/*!* contact-rectangle *!*/
-
-/*position: absolute;*/
-/*width: 1440px;*/
-/*height: 534px;*/
-/*left: 0px;*/
-/*top: 786px;*/
-
-/*background: #585454;*/
-/*box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);*/
-
-
-/*!* Poți adăuga gratuit anunțuri *!*/
-
-/*position: absolute;*/
-/*width: 473px;*/
-/*height: 44px;*/
-/*left: 733px;*/
-/*top: 817px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 36px;*/
-/*line-height: 44px;*/
-/*!* identical to box height *!*/
-
-/*color: #FFFFFF;*/
-
-
-
-/*!* Poți căuta cu ușurință imobile *!*/
-
-/*position: absolute;*/
-/*width: 501px;*/
-/*height: 44px;*/
-/*left: 733px;*/
-/*top: 877px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 36px;*/
-/*line-height: 44px;*/
-/*!* identical to box height *!*/
-
-/*color: #FFFFFF;*/
-
-
-
-/*!* Proprietarii imobilelor sunt verificați *!*/
-
-/*position: absolute;*/
-/*width: 601px;*/
-/*height: 44px;*/
-/*left: 733px;*/
-/*top: 937px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 36px;*/
-/*line-height: 44px;*/
-/*!* identical to box height *!*/
-
-/*color: #FFFFFF;*/
-
-
-
-/*!* Funcționăm pe tot teritoriul României *!*/
-
-/*position: absolute;*/
-/*width: 626px;*/
-/*height: 44px;*/
-/*left: 733px;*/
-/*top: 997px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 36px;*/
-/*line-height: 44px;*/
-/*!* identical to box height *!*/
-
-/*color: #FFFFFF;*/
-
-
-
-/*!* contact *!*/
-
-/*!* Auto layout *!*/
-/*display: flex;*/
-/*flex-direction: row;*/
-/*align-items: flex-start;*/
-/*padding: 0px;*/
-/*gap: 100px;*/
-
-/*position: absolute;*/
-/*width: 1046px;*/
-/*height: 76px;*/
-/*left: 160px;*/
-/*top: 1156px;*/
-
-
-
-/*!* Contactează-ne acum *!*/
-
-/*width: 378px;*/
-/*height: 44px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 36px;*/
-/*line-height: 44px;*/
-/*!* identical to box height *!*/
-
-/*color: #FFFFFF;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 0;*/
-/*flex-grow: 0;*/
-
-
-/*!* Frame 1 *!*/
-
-/*!* Auto layout *!*/
-/*display: flex;*/
-/*flex-direction: column;*/
-/*justify-content: center;*/
-/*align-items: flex-start;*/
-/*padding: 0px;*/
-
-/*width: 323px;*/
-/*height: 76px;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 1;*/
-/*flex-grow: 0;*/
-
-
-/*!* Rectangle 3 *!*/
-
-/*width: 49px;*/
-/*height: 52px;*/
-
-/*background: url(email-icon);*/
-/*mix-blend-mode: screen;*/
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 0;*/
-/*flex-grow: 0;*/
-
-
-/*!* imobiliare_pentru_tine@gmail.com *!*/
-
-/*width: 323px;*/
-/*height: 24px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 20px;*/
-/*line-height: 24px;*/
-
-/*color: #FFFFFF;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 1;*/
-/*flex-grow: 0;*/
-
-
-/*!* Frame 2 *!*/
-
-/*!* Auto layout *!*/
-/*display: flex;*/
-/*flex-direction: column;*/
-/*justify-content: center;*/
-/*align-items: flex-start;*/
-/*padding: 0px;*/
-
-/*width: 145px;*/
-/*height: 76px;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 2;*/
-/*flex-grow: 0;*/
-
-
-/*!* Rectangle 3 *!*/
-
-/*width: 49px;*/
-/*height: 52px;*/
-
-/*background: url(phone-icon);*/
-/*mix-blend-mode: screen;*/
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 0;*/
-/*flex-grow: 0;*/
-
-
-/*!* +40761937332 *!*/
-
-/*width: 145px;*/
-/*height: 24px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 20px;*/
-/*line-height: 24px;*/
-
-/*color: #FFFFFF;*/
-
-
-/*!* Inside auto layout *!*/
-/*flex: none;*/
-/*order: 1;*/
-/*flex-grow: 0;*/
-
-
-/*!* De ce să ne alegi pe noi? *!*/
-
-/*position: absolute;*/
-/*width: 423px;*/
-/*height: 44px;*/
-/*left: 160px;*/
-/*top: 900px;*/
-
-/*font-family: 'Inter';*/
-/*font-style: normal;*/
-/*font-weight: 400;*/
-/*font-size: 36px;*/
-/*line-height: 44px;*/
-/*!* identical to box height *!*/
-
-/*color: #FFFFFF;*/
-
-
-
-/*!* Arrow 1 *!*/
-
-/*box-sizing: border-box;*/
-
-/*position: absolute;*/
-/*width: 106.02px;*/
-/*height: 0px;*/
-/*left: 606px;*/
-/*top: 837px;*/
-
-/*border: 3px solid #CC506E;*/
-/*transform: rotate(1.08deg);*/
-
-
-/*!* Arrow 2 *!*/
-
-/*box-sizing: border-box;*/
-
-/*position: absolute;*/
-/*width: 106px;*/
-/*height: 0px;*/
-/*left: 606px;*/
-/*top: 899px;*/
-
-/*border: 3px solid #CC506E;*/
-
-
-/*!* Arrow 3 *!*/
-
-/*box-sizing: border-box;*/
-
-/*position: absolute;*/
-/*width: 106px;*/
-/*height: 0px;*/
-/*left: 606px;*/
-/*top: 949px;*/
-
-/*border: 3px solid #CC506E;*/
-
-
-/*!* Arrow 4 *!*/
-
-/*box-sizing: border-box;*/
-
-/*position: absolute;*/
-/*width: 106px;*/
-/*height: 0px;*/
-/*left: 606px;*/
-/*top: 1007px;*/
-
-/*border: 3px solid #CC506E;*/
