--- a/src/news/news-style.css
+++ b/src/news/news-style.css
@@ -25,7 +25,13 @@ body{
     width: 100vw;
     height: fit-content;
 
-    padding: 8vmax 3vmax 5vmax 3vmax;
+    padding: 2vmax 3vmax 5vmax 3vmax;
+}
+
+.card{
+    background-color: #585454 !important;
+    color: #FFFFFF !important;
+    text-align: center;
 }
 
 .card1Div{
@@ -49,10 +55,6 @@ body{
     height: fit-content;
 }
 
-.cardBody{
-    text-align: center;
-}
-
 .infoDiv{
     background-color: #585454;
     box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
@@ -66,4 +68,13 @@ body{
 
     color: #FFFFFF;
     font-size: 1.5vmax;
+}
+
+.headerTextStyle{
+    color: #585454;
+    font-size: 1.7vmax;
+
+    text-align: center;
+
+    padding: 4vmax 0 0 0;
 }
