--- a/src/rent/rent-style.css
+++ b/src/rent/rent-style.css
@@ -42,18 +42,6 @@ body{
     box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.bgrImageDiv4{
-
-}
-
-.bgrImageDiv5{
-
-}
-
-.bgrImageDiv6{
-
-}
-
 .multipleCardsDiv{
     display: block;
 
@@ -62,6 +50,7 @@ body{
 
     border: 3px solid #cc506e;
     box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 0.5vmax;
     margin: 1vmax 2vmax 1vmax 10vmax;
 
     overflow-y: scroll;
